
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct dm_buffer {scalar_t__ hold_count; int state; } ;
typedef int gfp_t ;


 int B_DIRTY ;
 int B_READING ;
 int B_WRITING ;
 int __GFP_FS ;
 int __free_buffer_wake (struct dm_buffer*) ;
 int __make_buffer_clean (struct dm_buffer*) ;
 int __unlink_buffer (struct dm_buffer*) ;
 scalar_t__ test_bit (int ,int *) ;

__attribute__((used)) static bool __try_evict_buffer(struct dm_buffer *b, gfp_t gfp)
{
 if (!(gfp & __GFP_FS)) {
  if (test_bit(B_READING, &b->state) ||
      test_bit(B_WRITING, &b->state) ||
      test_bit(B_DIRTY, &b->state))
   return 0;
 }

 if (b->hold_count)
  return 0;

 __make_buffer_clean(b);
 __unlink_buffer(b);
 __free_buffer_wake(b);

 return 1;
}
